# aha_2025_tvc_scheduler

./: .gitignore  pyproject.toml
.github/workflows/: tv-ad-notification.yaml
data/: aha_tvc_202505-202506.csv
scripts/: check_tv_scheduler.py
