[project]
name = "aha-2025-tvc-scheduler"
version = "0.1.0"
description = ""
authors = [
    {name = "Eunwoo Cho",email = "eunwoo.cho@a-ha.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pytz (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
